# bsrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: book.yml  ci.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli.md  cookbook.md  features.md  introduction.md  migration.md  operations.md  quickstart.md
crates/bsrs/: Cargo.toml
crates/bsrs-backends/epics-ca/: Cargo.toml
crates/bsrs-backends/epics-ca/src/: lib.rs  real.rs  stub.rs
crates/bsrs-backends/epics-pva/: Cargo.toml
crates/bsrs-backends/epics-pva/src/: lib.rs  real.rs  stub.rs
crates/bsrs-backends/mock/: Cargo.toml
crates/bsrs-backends/mock/src/: lib.rs  mock_signal.rs
crates/bsrs-backends/soft/: Cargo.toml
crates/bsrs-backends/soft/src/: detector.rs  motor.rs  signal.rs
crates/bsrs-callbacks/: Cargo.toml
crates/bsrs-callbacks/src/: basic.rs  doc_encode.rs  doc_name.rs  kafka_sink.rs  lib.rs  tiled_sink.rs  zmq_sink.rs  zmq_source.rs
crates/bsrs-callbacks/tests/: tiled_sink_integration.rs  zmq_round_trip.rs
crates/bsrs-cli/: Cargo.toml
crates/bsrs-cli/src/: frame_source.rs  main.rs  manager.rs  migrate.rs  repl.rs
crates/bsrs-cli/tests/: cli_round_trip.rs  repl_script.rs
crates/bsrs-core/: Cargo.toml
crates/bsrs-core/src/: error.rs  ext.rs  lib.rs  lua_exposable.rs  msg.rs  status.rs
crates/bsrs-derive/: Cargo.toml
crates/bsrs-derive/src/: lib.rs
crates/bsrs-devices/: Cargo.toml
crates/bsrs-devices/src/: detector.rs  device.rs  lib.rs  observe.rs  signal.rs  signal_cache.rs  standard_readable.rs
crates/bsrs-devices/tests/: derive_device.rs
crates/bsrs-engine/: Cargo.toml
crates/bsrs-event-model/: Cargo.toml
crates/bsrs-host/: Cargo.toml
crates/bsrs-host/src/: areadetector.rs  ca_devices.rs  ca_suspender.rs  checkpoint_store.rs  lib.rs  lua_env.rs  lua_tiled.rs  manager_lua.rs  pva_devices.rs
crates/bsrs-plans/: Cargo.toml
crates/bsrs-plans/src/: lib.rs  preprocessors.rs
crates/bsrs-protocols-async/: Cargo.toml
crates/bsrs-protocols-async/src/: lib.rs
crates/bsrs-protocols-sync/: Cargo.toml
crates/bsrs-protocols-sync/src/: lib.rs
crates/bsrs-py/: Cargo.toml  build.rs
crates/bsrs-py/src/: lib.rs
crates/bsrs-py/tests/: python_smoke.rs
crates/bsrs-qs/: Cargo.toml
crates/bsrs-qs/examples/: qs_beamline.rs
crates/bsrs-qs/src/: curve.rs  dispatch.rs  lib.rs  lua_eval.rs  metrics.rs  permissions.rs  registry.rs  server.rs  transport.rs
crates/bsrs-qs/tests/: qs_round_trip.rs
crates/bsrs-stream/: Cargo.toml
crates/bsrs/benches/: document_fanout.rs  plan_loop.rs
crates/bsrs/examples/: async_count.rs  mini_beamline_scan.rs  qs_beamline.rs  scan_motor.rs  sync_count.rs
crates/bsrs/src/: lib.rs
crates/bsrs/src/backends/: mod.rs
crates/bsrs/src/backends/epics_ca/: mod.rs  real.rs  stub.rs
crates/bsrs/src/backends/epics_pva/: mod.rs  real.rs  stub.rs
crates/bsrs/src/backends/mock/: mock_signal.rs  mod.rs
crates/bsrs/src/backends/soft/: detector.rs  motor.rs  signal.rs
crates/bsrs/src/callbacks/: basic.rs  doc_encode.rs  doc_name.rs  kafka_sink.rs  mod.rs  tiled_sink.rs  zmq_sink.rs  zmq_source.rs
crates/bsrs/src/core/: error.rs  ext.rs  lua_exposable.rs  mod.rs  msg.rs  plan.rs  runtime.rs  status.rs  subscription.rs  suspender.rs
crates/bsrs/src/devices/: detector.rs  device.rs  mod.rs  observe.rs  signal.rs  signal_cache.rs  standard_readable.rs
crates/bsrs/src/engine/: bundler.rs  mod.rs  run_engine.rs  sink.rs  suspender.rs
crates/bsrs/src/event_model/: compose.rs  documents.rs  page.rs
crates/bsrs/src/host/: areadetector.rs  ca_devices.rs  ca_suspender.rs  checkpoint_store.rs  lua_env.rs  lua_tiled.rs  manager_lua.rs  mod.rs  pva_devices.rs
crates/bsrs/src/plans/: mod.rs  preprocessors.rs
crates/bsrs/src/protocols_async/: mod.rs
crates/bsrs/src/protocols_sync/: mod.rs
crates/bsrs/src/qs/: curve.rs  dispatch.rs  lua_eval.rs  methods.rs  metrics.rs  mod.rs  permissions.rs  registry.rs  server.rs  tasks.rs  transport.rs
crates/bsrs/src/stream/: mod.rs  pipe.rs
crates/bsrs/src/stream/sinks/: binary.rs  counting.rs  hdf5.rs
crates/bsrs/src/stream/sources/: pva_mon.rs  vec.rs
crates/bsrs/tests/: bluesky_style_api.rs  cli_round_trip.rs  derive_device.rs  end_to_end.rs  qs_round_trip.rs  repl_script.rs  runengine_features.rs  tiled_sink_integration.rs  zmq_round_trip.rs
crates/cirrus/: Cargo.toml
crates/cirrus-backends/epics-ca/: Cargo.toml
crates/cirrus-backends/epics-ca/src/: lib.rs  real.rs  stub.rs
crates/cirrus-callbacks/: Cargo.toml
crates/cirrus-callbacks/src/: basic.rs  doc_encode.rs  doc_name.rs  kafka_sink.rs  lib.rs  tiled_sink.rs  zmq_sink.rs  zmq_source.rs
crates/cirrus-callbacks/tests/: tiled_sink_integration.rs  zmq_round_trip.rs
crates/cirrus-cli/: Cargo.toml
crates/cirrus-cli/src/: ca_suspender.rs  client.rs  doctor.rs  frame_source.rs  lua_env.rs  main.rs  manager.rs  manager_lua.rs  migrate.rs  repl.rs
crates/cirrus-cli/tests/: cli_round_trip.rs  repl_script.rs
crates/cirrus-derive/: Cargo.toml
crates/cirrus-derive/src/: lib.rs
crates/cirrus-devices/: Cargo.toml
crates/cirrus-engine/: Cargo.toml
crates/cirrus-py/: Cargo.toml  build.rs
crates/cirrus-py/src/: lib.rs
crates/cirrus-py/tests/: python_smoke.rs
crates/cirrus-qs/: Cargo.toml
crates/cirrus-qs/examples/: qs_beamline.rs
crates/cirrus-qs/src/: curve.rs  dispatch.rs  lib.rs  methods.rs  metrics.rs  permissions.rs  queue.rs  registry.rs  server.rs  state.rs  transport.rs
crates/cirrus-qs/tests/: qs_round_trip.rs
crates/cirrus-stream/: Cargo.toml
crates/cirrus-stream/src/sinks/: binary.rs  counting.rs  hdf5.rs  mod.rs
crates/cirrus-stream/src/sources/: pva_mon.rs  vec.rs
doc/: 00-vision.md  01-architecture.md  02-event-model.md  03-runengine.md  04-devices.md  05-streaming.md  06-rules.md  07-milestones.md  08-decisions.md  09-references.md  10-roadmap.md
doc/gap-analysis/: 01-engine.md  02-plans.md  (+4 more)
examples/mini_beamline_qs/: Cargo.toml
examples/mini_beamline_qs/src/: dcm.rs  main.rs  table.rs
kodex-out/: GRAPH_REPORT.md  graph.html  graph.json
(+70 files in other folders)
