[workspace]
resolver = "2"
default-members = [
    "crates/bsrs",
    "crates/bsrs-cli",
]
members = [
    "crates/bsrs-event-model",
    "crates/bsrs-core",
    "crates/bsrs-derive",
    "crates/bsrs-protocols-async",
    "crates/bsrs-protocols-sync",
    "crates/bsrs-engine",
    "crates/bsrs-plans",
    "crates/bsrs-devices",
    "crates/bsrs-backends/soft",
    "crates/bsrs-backends/mock",
    "crates/bsrs-backends/epics-ca",
    "crates/bsrs-backends/epics-pva",
    "crates/bsrs-stream",
    "crates/bsrs-callbacks",
    "crates/bsrs",
    "crates/bsrs-cli",
    "crates/bsrs-host",
    "crates/bsrs-qs",
    "crates/bsrs-py",
    "examples/mini_beamline_qs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/bsrs"

[workspace.dependencies]
# core deps
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
zmq = "0.10"
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
rustyline = "14"

# internal
bsrs-event-model    = { path = "crates/bsrs-event-model" }
bsrs-core           = { path = "crates/bsrs-core" }
bsrs-protocols-async = { path = "crates/bsrs-protocols-async" }
bsrs-protocols-sync  = { path = "crates/bsrs-protocols-sync" }
bsrs-engine         = { path = "crates/bsrs-engine" }
bsrs-plans          = { path = "crates/bsrs-plans" }
bsrs-devices        = { path = "crates/bsrs-devices" }
bsrs-backend-soft   = { path = "crates/bsrs-backends/soft" }
bsrs-backend-mock   = { path = "crates/bsrs-backends/mock" }
bsrs-stream         = { path = "crates/bsrs-stream" }
bsrs-callbacks      = { path = "crates/bsrs-callbacks" }
bsrs-derive         = { path = "crates/bsrs-derive" }
bsrs-qs             = { path = "crates/bsrs-qs" }
bsrs-host           = { path = "crates/bsrs-host" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
