[workspace]
resolver = "2"
default-members = [
    "crates/bsrs",
]
members = [
    "crates/bsrs",
    "crates/bsrs-derive",
    "crates/bsrs-py",
    "examples/mini_beamline_qs",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "BSD-3-Clause"
repository = "https://github.com/physwkim/bsrs"

[workspace.dependencies]
# core deps
async-trait = "0.1"
async-stream = "0.3"
bytes = "1"
futures = "0.3"
pin-project-lite = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "fs", "io-util"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
zmq = "0.10"
mlua = { version = "0.11", features = ["lua54", "vendored", "send"] }
rustyline = "14"

# internal — the only surviving library crate besides the consolidated `bsrs`
# is the proc-macro companion (a proc-macro cannot be a module of a normal crate).
bsrs                = { version = "0.1.0", path = "crates/bsrs" }
bsrs-derive         = { version = "0.1.0", path = "crates/bsrs-derive" }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
