[package]
name = "bsrs-callbacks"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Document sinks: JSONL, table, etc."

[features]
default = []
zmq = ["dep:zmq", "dep:rmp-serde"]
tiled = ["dep:tiled-client", "dep:url"]
kafka = ["dep:kafka", "dep:rmp-serde"]

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
bsrs-core.workspace = true
bsrs-event-model.workspace = true
bsrs-engine.workspace = true

zmq          = { version = "0.10", optional = true }
rmp-serde    = { version = "1", optional = true }
tiled-client = { git = "https://github.com/physwkim/tiled-rs.git", branch = "main", optional = true }
url          = { version = "2", optional = true }
kafka        = { version = "0.10", optional = true, default-features = false, features = ["snappy"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
serde_json.workspace = true
zmq = "0.10"
rmp-serde = "1"
bsrs-plans.workspace = true
bsrs-backend-soft = { path = "../bsrs-backends/soft" }
