[package]
name = "bsrs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bsrs CLI — qs-manager (server) and qs (client) subcommands."

[dependencies]
tokio = { workspace = true, features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
tracing.workspace = true
tracing-subscriber.workspace = true
mlua.workspace = true
rustyline.workspace = true
async-stream.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
zmq.workspace = true
bsrs-core.workspace = true
bsrs-engine.workspace = true
bsrs-event-model.workspace = true
bsrs-callbacks.workspace = true
bsrs-plans.workspace = true
bsrs-qs.workspace = true
bsrs-host.workspace = true
bsrs-backend-soft.workspace = true
bsrs-stream = { workspace = true, optional = true }
bsrs-protocols-async = { workspace = true, optional = true }
epics-pva-rs = { version = "0.16.2", optional = true }
bytes = { workspace = true, optional = true }

[features]
default = ["ca", "pva"]
# Expose `tiled.*` Lua bindings (read-side: from_uri / keys /
# metadata / get) AND the `--doc-tiled` repl flag that wires
# `bsrs-callbacks::TiledSink` (write-side: register Documents
# into a Tiled catalog).
tiled = ["bsrs-host/tiled", "bsrs-callbacks/tiled"]
# Wire real backends (PvaMonitorSource + Hdf5FrameSink) into the
# `bsrs frame-source` subcommand. Without this feature the
# subcommand is a scaffolded stub that prints args and exits.
frame-source = [
    "dep:bsrs-stream",
    "dep:bsrs-protocols-async",
    "dep:epics-pva-rs",
    "dep:bytes",
    "bsrs-stream/pva",
    "bsrs-stream/hdf5",
    "bsrs-callbacks/zmq",
]
# Expose `ca_motor(name, val_pv, rbv_pv)` and
# `ca_detector(name, value_pv)` Lua factories that connect to a
# live EPICS Channel Access IOC. Pulls in `epics-ca-rs` via
# bsrs-backend-epics-ca's `real` feature (through bsrs-host).
ca = ["bsrs-host/ca"]
# Symmetric for PV Access — `pva_motor` / `pva_detector` Lua
# factories on top of `bsrs-backend-epics-pva`.
pva = ["bsrs-host/pva"]

[dev-dependencies]
bsrs-derive.workspace = true
tempfile = "3"

[[bin]]
name = "bsrs"
path = "src/main.rs"
