[package]
name = "bsrs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types for bsrs: Reading, Status, Msg, Plan, runtime."

[dependencies]
async-trait.workspace = true
futures.workspace = true
pin-project-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
bsrs-event-model.workspace = true
