[package]
name = "bsrs-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for bsrs: #[derive(Device)] and #[signal(...)] attribute."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
