[package]
name = "bsrs-plans"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Plans (count/scan/grid_scan/fly) and plan_stubs."

[dependencies]
async-stream.workspace = true
futures.workspace = true
serde_json.workspace = true
bsrs-core.workspace = true
bsrs-event-model.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
async-trait.workspace = true
