[package]
name = "bsrs-protocols-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ophyd-async protocol traits, ported to Rust async/await."

[dependencies]
async-trait.workspace = true
bytes.workspace = true
futures.workspace = true
serde_json.workspace = true
tokio.workspace = true
bsrs-core.workspace = true
bsrs-event-model.workspace = true
