[package]
name = "bsrs-protocols-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ophyd-style sync protocol traits — blanket impls over the async traits."

[dependencies]
bsrs-core.workspace = true
bsrs-event-model.workspace = true
bsrs-protocols-async.workspace = true
serde_json.workspace = true
