[package]
name = "cirrus-derive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for cirrus: #[derive(Device)] and #[signal(...)] attribute."

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
