[package]
name = "mini-beamline-qs"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Example downstream bsrs server: registers a composite Dcm (energy + theta) and Table (x + y) device against the epics-rs mini-beamline IOC. Demonstrates the bsrs host (Lua) + qs library API."

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
serde_json.workspace = true
clap.workspace = true
# Consolidated single crate. `host` pulls in the `qs` module; `ca` enables
# the EPICS Channel Access backend. `core`/`event_model` are always-on, and
# the derive macros (`#[bsrs::lua_methods]`) are re-exported from `bsrs`.
bsrs = { workspace = true, features = ["host", "ca"] }

[[bin]]
name = "mini-beamline-qs"
path = "src/main.rs"
