[package]
name = "bsrs-backend-mock"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mock backend for unit tests."

[dependencies]
bsrs-core.workspace = true
bsrs-event-model.workspace = true
bsrs-protocols-async.workspace = true
bsrs-devices.workspace = true
bsrs-backend-soft.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
