[package]
name = "bsrs-backend-soft"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Soft (in-memory) signal backend + soft detector for tests and demos."

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
bsrs-core.workspace = true
bsrs-event-model.workspace = true
bsrs-protocols-async.workspace = true
bsrs-devices.workspace = true
